[tool.poetry]
name = "chatbot-server-infracom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chatbot_server_infracom"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
